# Cpp-Project-Template

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  my_lib.cpp  my_lib.hpp
tests/: CMakeLists.txt  test_main.cpp
